tooling/base/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  parentRefs:
    - name: platform-private
      namespace: infrastructure
  hostnames:
    - "headlamp.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
