tooling/base/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "headlamp-ts"
  annotations:
    tailscale.com/proxy-class: "k8s"
    tailscale.com/hostname: "headlamp"
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - "headlamp"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
